<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?><resources>    <string name="app_name">philanthroFeed</string>    <string name="action_settings">Settings</string>    <string name="hello_world">Hello world!</string>    <string name="title_receipient_list">Recipients</string>    <string name="title_receipient_detail">Recipient Detail</string>    <string name="welcome_message1">Please enter your </string>	<string name="welcome_message2"> information</string>    	<string name="username_message">E-mail</string>    <string name="password_message">Password</string>    <string name="login_button_message">Login</string>    <string name="title_activity_recipient__selection">Recipient_Selection</string>    <string name="philogo_desc">philanthroFeed Logo</string>    <string name="title_activity_show_recipient">ShowRecipient</string>    <string name="donate_message">Enter the amount you would like to donate</string>    <string name="donation_hint_message">$</string>    <string name="title_activity_donate_thanks">Thanks for donating!</string>    <string name="menu_selection_message">Feed More!</string></resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">philanthroFeed</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_receipient_list">Recipients</string>
    <string name="title_receipient_detail">Recipient Detail</string>
    <string name="welcome_message1">Please enter your </string>
	<string name="welcome_message2"> information</string>    
	<string name="username_message">E-mail</string>
    <string name="password_message">Password</string>
    <string name="login_button_message">Login</string>
    <string name="title_activity_recipient__selection">Recipient_Selection</string>
    <string name="philogo_desc">philanthroFeed Logo</string>
    <string name="title_activity_show_recipient">ShowRecipient</string>
    <string name="donate_message">Enter the amount you would like to donate</string>
    <string name="donation_hint_message">$</string>
    <string name="donate_text">Donate Now!</string>
    
    

</resources>
>>>>>>> cdb2ff2f730a8fe9a42fc3395d20808f29057801
